<resources>
    <string name="bottom_app_bar_home">홈</string>
    <string name="bottom_app_bar_wish_list">찜 내역</string>
    <string name="bottom_app_bar_my">마이</string>
    <string name="kakao_login">카카오로 시작하기</string>

    <string name="request_permission_title">내 주변 상품을 찾으려면\n위치 권한이 필요해요</string>
    <string name="request_permission_description">위치를 켜면 가까운 매장부터 보여드려요</string>
    <string name="request_permission_allow">허용하기</string>
    <string name="request_permission_later">나중에 하기</string>

    <string name="expand_radius_title">주변에 마감상품이 없어요</string>
    <string name="expand_radius_description">마감 상품은 보통 5시 이후에 가장 많이 올라와요</string>
    <string name="expand_radius_action">반경 5km로 넓히기</string>

    <string name="unstable_network_connection_title">연결이 원활하지 않아요</string>
    <string name="unstable_network_connection_description">잠시 후 다시 시도해 주세요</string>
    <string name="unstable_network_connection_retry">다시 시도하기</string>

    <string name="banner_location_permission">위치 권한이 꺼져 있어요.\n근처 상품을 확인하려면 설정해주세요.</string>
    <string name="banner_new_like">새로운 찜이 생겼어요</string>
    <string name="banner_action_turn_on">켜기</string>
    <string name="banner_action_confirm">확인하기</string>
    <string name="banner_payment_notice">매장에 직접 방문해서 결제하셔야 해요.</string>
    <string name="banner_pickup_notice">15분 안에 매장에서 픽업하지 않으시면\n찜이 자동으로 취소돼요.</string>

    <string name="timer_card_active">매장 도착까지 남은 시간</string>
    <string name="timer_card_expired">시간이 지나 자동 취소 됐어요</string>
    <string name="timer_card_badge_relaxed">여유있어요</string>
    <string name="timer_card_badge_urgent">서둘러주세요</string>
    <string name="timer_card_end_time">찜 종료</string>

    <string name="recipe_difficulty_low">난이도 하</string>
    <string name="recipe_difficulty_medium">난이도 중</string>
    <string name="recipe_difficulty_high">난이도 상</string>
    <string name="recipe_calorie">%1$dkcal</string>
    <string name="recipe_cooking_time">%1$d분 소요</string>

    <string name="map_store_closing_time">%1$s 마감</string>

    <string name="product_list_card_remaining_count">%1$d개 남음</string>
    <string name="product_category_grains">곡류</string>
    <string name="product_category_vegetables">과채류</string>
    <string name="product_category_meat">육류</string>
    <string name="product_category_seafood">어류</string>
    <string name="product_category_nuts">견과류</string>
    <string name="product_category_etc">기타</string>

    <string name="product_detail_seller_label">판매처</string>
    <string name="product_detail_operating_hours_label">운영시간</string>
    <string name="product_detail_distance_prefix">내 위치로부터 </string>
    <string name="product_detail_distance_value">%1$s</string>

    <string name="owner_product_card_remaining_prefix">남은 수량</string>
    <string name="owner_product_card_expected_visit_prefix">방문 예정</string>
    <string name="owner_product_card_stock_shortfall">찜한 수량보다 재고가 %1$d개 부족해요</string>

    <string name="wish_status_checking_stock">재고확인중</string>
    <string name="wish_status_in_progress">찜하는중</string>
    <string name="wish_status_picked_up">수령완료</string>
    <string name="wish_status_expired">시간만료</string>

    <string name="pickup_receipt_product">품목명</string>
    <string name="pickup_receipt_date">수령 일시</string>
    <string name="pickup_receipt_store">점포명</string>
    <string name="pickup_receipt_quantity">구매 수량</string>
    <string name="pickup_receipt_price">총 금액</string>

    <string name="pickup_consumer_name">%1$s님</string>
    <string name="pickup_request_remaining_time">남은 시간</string>
    <string name="pickup_request_expired">찜 만료</string>
    <string name="pickup_request_complete">픽업 완료했어요</string>
    <string name="pickup_request_completed">픽업 완료된 찜</string>

    <string name="store_location_card_button">길찾기</string>

    <string name="product_price">%,d원</string>
    <string name="product_quantity">%1$d개</string>
    <string name="stepper_decrease">수량 감소</string>
    <string name="stepper_increase">수량 증가</string>
    <string name="owner_bottom_store">점포 관리</string>
    <string name="owner_bottom_settings">설정</string>
    <string name="pickup_request_unavailable">픽업불가</string>
    <string name="pickup_request_cancelled">찜 취소</string>

    <string name="owner_product_sheet_no">아니요</string>
    <string name="owner_product_sheet_confirm_yes">네, 맞아요</string>
    <string name="owner_product_sheet_quantity_title">지금 판매 가능한 수량이\n%1$d개가 맞나요?</string>
    <string name="owner_product_sheet_shortage_title">재고가 %1$d개 부족해요.</string>
    <string name="owner_product_sheet_cancel_reservations">찜 취소하기</string>
    <string name="owner_product_sheet_later">나중에 하기</string>
    <string name="owner_product_sheet_shortage_hint">선착순을 기준으로 부족한 수량만큼 찜을 취소해야 해요.</string>
    <string name="product_category_fruit">과일</string>
    <string name="product_category_dairy_egg">유제품/달걀</string>
    <string name="product_category_bakery">베이커리</string>
    <string name="product_category_prepared_food">조리식품</string>

    <string name="load_status_error">정보를 불러오지 못했어요</string>
    <string name="load_status_retry">다시 시도</string>
</resources>
