...
import com.swyp.mangro.core.designsystem.component.card.wishlist.WishStatus
import kotlinx.collections.immutable.persistentListOf

val dummyHoldDetailInfo = HoldDetailInfo(
    item = WishDetailItem(
        id = "1",
        name = "복숭아 4입",
        quantity = 1,
        price = 4_000,
        originalPrice = 10_000,
        discountRate = 50,
        status = WishStatus.IN_PROGRESS,
    ),
...
